Fix visible focus on checkboxes & radio buttons.
Closes #249.

That’s been broken since September 18, 2019. :(
Just in Safari, though, apparently.
https://github.com/trey/cassettenest/commit/d9fe19b137595e21bc47f61353d82493dbd98c2a

--- a/static/scss/components/_forms.scss
+++ b/static/scss/components/_forms.scss
@@ -54,7 +54,7 @@ textarea {
     resize: vertical;
 }
 
-input,
+input:not([type=checkbox]):not([type=radio]),
 input[type=submit],
 textarea,
 button,
